--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
       <br>
       <br>
       <p>
+         <img src="pictures/QR code.png" alt="Girl in a jacket" width="300" height="250">
 
 
 
@@ -276,6 +277,7 @@
      QR code
     </a>
    </li>
+         <img src="pictures/QR code.png" alt="Girl in a jacket" width="300" height="250">
 
 
    <li>
