--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <h2 class="myHeadline">Some photossssss</h2>
     <section id="index.html#myPhotos" class="section">
       <p>
-         <img src="pictures/pic01.jpg"alt="Girl in a jacket" width="300" height="250">
+         <img src="pictures/Screen Shot 2020-03-21 at 15.42.08.png" alt="Girl in a jacket" width="300" height="250">
          <img src="pictures/Screen Shot 2020-03-21 at 15.45.59.png" alt="Girl in a jacket" width="300" height="250">
       </p>
      <br>
@@ -187,6 +187,7 @@
       <br>
       <p>
          <img src="pictures/QR code.png" alt="Girl in a jacket" width="300" height="250">
+         <img src="pictures/Screen Shot 2020-03-21 at 15.42.08.png" alt="Girl in a jacket" width="300" height="250">
 
 
 
