--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
          <div id="menu">
             <li><a href="index.html#aboutMe">About Meeeee</a></li>
             <li><a href="index.html#myPhotos">My Photos</a></li>
-            <li><a href="index.html#myPlaylist">My PlayList</a></li>
+            <li><a href="#myPlaylist">My PlayList</a></li>
             <li><a href="index.html#like">Like</a></li>
             <li><a href="index.html#QR">QR</a></li>
             <li><a href="index.html#Q&A">Q&A</a></li>
