--- a/index.html
+++ b/index.html
@@ -95,14 +95,24 @@
 
 
 
-<body>
+<body> 
+         <div id="menu">
+            <li><a href="#aboutMe">About Me</a></li>
+            <li><a href="#myPhotos">My Photos</a></li>
+            <li><a href="#myPlaylist">My PlayList</a></li>
+            <li><a href="#like">Like</a></li>
+            <li><a href="#QR">QR</a></li>
+            <li><a href="#Q&A">Q&A</a></li>
+            <li><a href="#contactMe">Contact Me</a></li>
+         </div>   
 
+<!--
 
    <nav>
       <ul>
          <div id="menu">
-            <li><a href="index.html#aboutMe">About Meeeee</a></li>
-            <li><a href="index.html#myPhotos">My Photos</a></li>
+            <li><a href="#aboutMe">About Me</a></li>
+            <li><a href="#myPhotos">My Photos</a></li>
             <li><a href="#myPlaylist">My PlayList</a></li>
             <li><a href="index.html#like">Like</a></li>
             <li><a href="index.html#QR">QR</a></li>
@@ -112,7 +122,7 @@
        </ul>
    </nav>
 
-
+-->
   
        
    <h2 class="myHeadline">About Me</h2>
@@ -127,8 +137,8 @@
 
 
 
-    <h2 class="myHeadline">Some photossssss</h2>
-    <section id="index.html#myPhotos" class="section">
+    <h2 class="myHeadline">Some photos</h2>
+    <section id="myPhotos" class="section">
       <p>
          <img src="pictures/Screen Shot 2020-03-21 at 15.42.08.png" alt="Girl in a jacket" width="300" height="250">
          <img src="pictures/Screen Shot 2020-03-21 at 15.45.59.png" alt="Girl in a jacket" width="300" height="250">
@@ -138,7 +148,6 @@
    </section>
 
 
-   <h2 class="myHeadline">My favorite songs</h2>
    <section id="#myPlaylist" class="section">
       <br>
       <br>
@@ -146,7 +155,8 @@
       <br>
       <br>
       <br>
-      <p algin="center">
+             <h2 class="myHeadline">My favorite songs</h2>
+      <p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?start=36&amp;list=PLJ9-tGsa8tG51jEqXAzXm9eC5zIwFYZWf" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </p>
       </p>
       <br>
