--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
 
 <body> 
+       <nav>
+      <ul>
          <div id="menu">
             <li><a href="#aboutMe">About Me</a></li>
             <li><a href="#myPhotos">My Photos</a></li>
@@ -105,6 +107,8 @@
             <li><a href="#Q&A">Q&A</a></li>
             <li><a href="#contactMe">Contact Me</a></li>
          </div>   
+  </ul>
+   </nav>
 
 <!--
 
@@ -137,8 +141,8 @@
 
 
 
-    <h2 class="myHeadline">Some photos</h2>
     <section id="myPhotos" class="section">
+         <h2 class="myHeadline">Some photos</h2>
       <p>
          <img src="pictures/Screen Shot 2020-03-21 at 15.42.08.png" alt="Girl in a jacket" width="300" height="250">
          <img src="pictures/Screen Shot 2020-03-21 at 15.45.59.png" alt="Girl in a jacket" width="300" height="250">
@@ -168,8 +172,8 @@
 
 
 
-    <h2 class="myHeadline">put like on my facebook page &#128077;&#127996; </h2>
     <section id="#like" class="section">
+               <h2 class="myHeadline">put like on my facebook page &#128077;&#127996; </h2>
       <br>
       <br>
       <br>
