--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@
           <center>About Me</center></h2>
     <section id="#aboutMe" class="section">
       <p>
+            <center>
             Hello, my name is Shira &#128579.
             I am 25 years old.
+                   </center>
       </p>
       <br>
       <br>
@@ -127,10 +129,12 @@
 
 
     <section id="myPhotos" class="section">
-         <h2 class="myHeadline">Some photos</h2>
+           <h2 class="myHeadline"><center>Some photos</center></h2>
       <p>
+             <center>
          <img src="pictures/Screen Shot 2020-03-21 at 15.42.08.png" alt="Girl in a jacket" width="300" height="250">
          <img src="pictures/Screen Shot 2020-03-21 at 15.45.59.png" alt="Girl in a jacket" width="300" height="250">
+             </center>
       </p>
      <br>
      <br>
@@ -138,15 +142,12 @@
 
 
    <section id="#myPlaylist" class="section">
-          <h2 class="myHeadline">My favorite songs</h2>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>        
+          <h2 class="myHeadline"><center>My favorite songs</center></h2>        
       <p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?start=36&amp;list=PLJ9-tGsa8tG51jEqXAzXm9eC5zIwFYZWf" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    </p>
+             <center>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?start=36&amp;list=PLJ9-tGsa8tG51jEqXAzXm9eC5zIwFYZWf" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                    </iframe>    
+             </center>
       </p>
       <br>
       <br>
@@ -158,12 +159,6 @@
 
 
     <section id="#like" class="section">
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
           <h2 class="myHeadline">put like on my facebook page &#128077;&#127996; </h2>
       <p algin="center">
          <div class="fb-like" data-href="https://www.facebook.com/shira.wertheim" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="true"></div>
