--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
       line-height: 20px;
    } 
 
+   .web {   
+      font-family: times, Times New Roman, times-roman, georgia, serif;
+      color:dodgerblue ;
+      margin: 0;
+      padding: 0px 0px 6px 0px;
+      font-size: 20px;
+      line-height: 20px;
+   } 
+
        
    ul {
   position: -webkit-sticky; /* Safari */
@@ -282,7 +291,8 @@ td{
       <br>  
       <h2 class="myHeadline">questions and answers &#10067</h2>
       <p>
-         Question number 1:
+         <h2 class="web">Question number 1:</h2>
+
          <br>
          3 main differences between web1, web2, web3:
          <br>
@@ -318,7 +328,9 @@ td{
 
           <br>
           <br>
-          Question number 2:
+          <h2 class="web">Question number 2:</h2>
+
+          
           <br>
 
           Web 1.0:
