--- a/index.html
+++ b/index.html
@@ -335,11 +335,12 @@ td{
 
           Web 1.0:
           <br>
-          In web 1.0, the user can not rely on the retrive process; he need to search the relevant website himself.
+          In web 1.0, the user can not rely on the retrive process; he needs to search for the relevant website himself.
           <br>
-          In our example, if the user need websites that talking about "side effects of drugs", 
+          In our question, if the user needs websites that talking about "side effects of drugs", 
           <br>
-          he is the one that needs to search the url address of websites.
+          he is the one that needs to search the url address of websites, and not the search engine.
+
 
           <br>
           <br>
@@ -348,9 +349,9 @@ td{
           <br>
           Web 3.0 relys on tagging method to return more efficient data.
           <br>
-          Unlike Web 1.0, here we need to write the query "side effect of drugs", and the searching engine
+          Unlike Web 1.0, here we can write the query "side effect of drugs", and the searching engine
           <br>
-          will search for us the relevant websites.
+          will do the search and will return the relevant websites.
           
       </p>
       <br>
