--- a/index.html
+++ b/index.html
@@ -161,13 +161,17 @@ td{
             
             Hello, my name is Shira &#128579. I am 25 years old.
             <br>
-            Originally I live in Hod Hasharon, and studied in "Hadarim" high school.
+            I grew up and live in Hod Hasharon. I am a grduate of "Hadarim" High School.
             <br>
             Since I was a little child, I liked technology and computer science.
             <br>
             For this reason, I am a student in the department of system information in Ben Gurion University.
             <br>
-            In my opinon, to have the knowlegment to build websites is neccesarry and very usefull. 
+            In my opinon, to have the knowlegment to build websites is neccesarry and very usefull.
+            <br>
+            An example for the usage of SEO and Website building is my mother Wix website www.psysite.co.il.
+            <br>
+            My mothers Wix proffesional website is a good example for the knowledge I would like to learn and know. 
             <br>
             I am glad I have the opertunity to study this in a high level.
       </p>
@@ -175,7 +179,6 @@ td{
       <br>
     </section>
 
-    <br>
     <br>
     <br>
     <br>
