--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ td{
             <br>
             In my opinon, to have the knowlegment to build websites is neccesarry and very usefull.
             <br>
-            An example for the usage of SEO and Website building is my mother Wix website www.psysite.co.il.
+            An example for the usage of SEO and Website building is my mother Wix website <a href="www.psysite.co.il"> Psysite - Yeela Wertheim</a>.
             <br>
             My mothers Wix proffesional website is a good example for the knowledge I would like to learn and know. 
             <br>
