--- a/index.html
+++ b/index.html
@@ -1,4 +1,28 @@
-<!DOCTYPE html>
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@shirawertheim 
+Learn Git and GitHub without any code!
+Using the Hello World guide, you’ll start a branch, write comments, and open a pull request.
+
+
+shirawertheim
+/
+Shira-Wertheim-
+1
+00
+ Code Issues 0 Pull requests 0 Actions Projects 0 Wiki Security Insights Settings
+Shira-Wertheim-/index.html
+@shirawertheim shirawertheim Update index.html
+6fd8bb3 3 minutes ago
+403 lines (318 sloc)  9.03 KB
+  
+<!DOCTYPE html>
 <html lang ="en">
 
 
@@ -132,8 +156,8 @@ td{
 
       <ul>
        <li style="float:center">
-      <img src="pictures/Apolo.jpeg"
-      width="150" height="120/">
+      <img src="pictures/Apolo1.jpeg"
+      width="150" height="140/">
    </li> 
        <nav>
          <div id="menu">
@@ -400,4 +424,15 @@ td{
    </center>
       </body>
    </html>
-
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
